Add test coverage with jacoco