@@ -8,6 +8,8 @@
     <artifactId>BarKeep</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
+
     <dependencies>
         <!-- JavaFX -->
         <dependency>
@@ -77,7 +79,6 @@
                 <version>3.0.0-M5</version>
                 <configuration>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                    <argLine>--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
 
@@ -89,6 +90,27 @@
                 <configuration>
                     <mainClass>barkeep.App</mainClass>
                 </configuration>
+            </plugin>
+
+            <!-- Jacoco test coverage -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.5</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
